# boring-code

./: .clangd  .clangd_template  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trace_model.hpp  view.cpp  view.hpp  worker.hpp
src/cli/: commands.hpp  main.cpp  view.cpp  view.hpp
src/core/: address.hpp  block.cpp  block.hpp  database.cpp  database.hpp  disassembler.cpp  format.h  loader.cpp  loader.hpp  main.cpp  object.cpp  object.hpp  overload.hpp  provider.hpp  view.cpp  view.hpp
src/core/util/: hash.h  util.cpp  util.hpp
src/data/: provider.cpp  provider.hpp  session.hpp
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panel.hpp  trace_model.hpp  view.cpp  view.hpp  worker.hpp
src/providers/: direct.cpp  direct.hpp  direct_unix.cpp  direct_win.cpp
src/tools/: CMakeLists.txt  counter.h  header.h  main.c  main.h  record.c  record.h
src/ui/: view.cpp  view.hpp
tools/: CMakeLists.txt  header.h  main.c
